[package]
name = "slack_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
log = "0.4.22"
ratatui = "0.29.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
simplelog = "0.12.2"
