[package]
name = "notion2html"
version = "0.1.0"
edition = "2021"

license = "MPL-2.0"
description = "Convert Notion pages to HTML"
repository = "https://github.com/EnyCode/notion2html"
readme = "README.md"
categories = ["command-line-utilities", "text-processing"]
keywords = ["notion", "html", "markdown", "cli"]

[dependencies]
log = "0.4.22"
owo-colors = "4.1.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
simplelog = "0.12.2"
